fix z-index pop-up info

--- a/app/assets/stylesheets/main/style.scss
+++ b/app/assets/stylesheets/main/style.scss
@@ -130,6 +130,9 @@ a.Xbutton:hover{
 
 /*Search Bar Width*/
 /*Modifica css prova Giugie*/
+#inner{
+  z-index: 10!important;
+}
 #iconField {
   color: white;
   background-color: black;
@@ -139,6 +142,7 @@ a.Xbutton:hover{
   background-color: #2b2b2b;
 }
 .iconBox{
+  z-index: 7!important;
   top: -644px;
   margin-left: 35px;
   background-color: black;
